# chess-spy

./: .pre-commit-config.yaml  README.md  pyproject.toml
chess-spy/: chess_com.py  main.py  position.py
