[tool.poetry]
name = "chess-spy"
version = "0.0.1"
description = "A CLI tool that will pull a scouting report for a user of chess.com"
authors = ["Ryan Sandridge <noreply@ryansandridge.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
packages = [{include = "chess_spy"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
rich = "^12.6.0"
typer = "^0.7.0"
chess = "^1.9.4"
sqlalchemy = "^1.4.46"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
